--- a/util/big_ep_templates/coot_model.tmpl
+++ b/util/big_ep_templates/coot_model.tmpl
@@ -4,11 +4,14 @@ handle_read_ccp4_map("{{ map_file }}", 0)
 {% if pdb_file %}
 read_pdb("{{ pdb_file }}")
 {% endif %}
-set_map_radius_em(20.0)
+set_map_radius_em(15.0)
 set_map_line_width(3)
 set_dynamic_map_sampling_on()
 set_last_map_contour_level(1.5)
 set_do_anti_aliasing(1)
+scale_zoom(0.5)
+set_clipping_front(4.0)
+set_clipping_back(4.05)
 graphics_draw()
 raster3d("raster_{{ tag_name }}_model.r3d")
 coot_real_exit(0)
