Updates for downstream phasing pipelines
* Record parameters used for triggering individual pipelines in ISPyB
* Run big_ep_report on individual pipelines
* Fix model snapshot script
* Update summary email layout
* Set importance rank for attachments
* Reduce logging levels
* Remove duplicate code

--- a/src/dlstbx/util/big_ep_templates/coot_model.tmpl
+++ b/src/dlstbx/util/big_ep_templates/coot_model.tmpl
@@ -13,5 +13,9 @@ scale_zoom(0.5)
 set_clipping_front(4.0)
 set_clipping_back(4.05)
 graphics_draw()
-raster3d("raster_{{ tag_name }}_model.r3d")
+raster3d("raster_{{ tag_name }}_model_0.r3d")
+set_view_quaternion(0.7071067811865475,0.7071067811865475,0,0)
+raster3d("raster_{{ tag_name }}_model_1.r3d")
+set_view_quaternion(0.7071067811865475,0,0.5,0.5)
+raster3d("raster_{{ tag_name }}_model_2.r3d")
 coot_real_exit(0)
