--- a/src/dlstbx/util/big_ep_templates/coot_model.tmpl
+++ b/src/dlstbx/util/big_ep_templates/coot_model.tmpl
@@ -5,6 +5,7 @@ handle_read_ccp4_map("{{ map_file }}", 0)
 read_pdb("{{ pdb_file }}")
 {% endif %}
 set_map_radius_em(12.0)
+set_zoom(50.0)
 set_last_map_contour_level(1.5)
 set_do_anti_aliasing(1)
 graphics_draw()
